feat: detect dark mode and hack to manipulate environment